add compare api for cursor and offset pagination
